# eazyreal.github.io

./: .gitignore  404.html  Intro-to-AI-lab4.md  README.MD  README.md  astro.config.mjs  config.yml  index.html  mkdocs.yml  package-lock.json  package.json  pyproject.toml  requirements.txt  search.html  sitemap.xml
.github/workflows/: ci.yml
Algorithm/talk_treap/: index.html
Blockchain/ECE598PV_S2021/: index.html
Blockchain/blockchain_research/: index.html
Blockchain/smartcontract_development/: index.html
Dev/mkdocs/: index.html
Math/Advanced_LA/: index.html
Math/Algebra_I/: index.html
Math/Algebra_II/: index.html
Math/IntroRAII/: index.html
Math/IntroRA_II/: index.html
_astro/: ArticleLayout.BIVTL2vl.css  ArticleLayout.BKkrZzuH.css  ArticleLayout.C2A2Kna4.css  ArticleLayout.CysPWf4O.css  ArticleLayout.D0f5UDFY.css  ArticleLayout.DIv3MRSu.css  ArticleLayout.LlX_2fMt.css  ArticleLayout.mJI03NH4.css  ArticleLayout.vOWwsWcx.css
_posts/: 2020-07-12-welcome-to-jekyll.markdown
about/: index.html
content/: cv.md  foo.md
cv/: index.html
docs/: CNAME  Mkdocs_Guide.md  about.md  cv-blockchain.md  cv.md  genai_first_principles.md  index.md  projects.md  step-by-step-mkdocs.md  tastes.md  writing_samples.md
experience/: index.html
genai_first_principles/: index.html
oss/: index.html
overrides/: 404.html  404.md
projects/: index.html
search/: search_index.json
socials/: index.html
static/: CNAME
step-by-step-mkdocs/: index.html
tags/: index.html
tastes/: index.html
writing/: index.html
writing_samples/: index.html
(+123 files in other folders)
